--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -51,6 +51,19 @@
                 "$gcc"
             ],
             "group": "build"
+        },
+        {
+            "type": "shell",
+            "label": "make debug llvm-tblgen",
+            "command": "make",
+            "args": ["-j8"],
+            "options": {
+                "cwd": "${workspaceFolder}/build/Debug/utils/TableGen"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build"
         }
     ]
 }
