--- a/llvm/utils/gn/secondary/llvm/utils/TableGen/BUILD.gn
+++ b/llvm/utils/gn/secondary/llvm/utils/TableGen/BUILD.gn
@@ -22,6 +22,7 @@ executable("llvm-tblgen") {
     "CodeGenSchedule.cpp",
     "CodeGenTarget.cpp",
     "DAGISelEmitter.cpp",
+    "AsmSimEmitter.cpp",
     "DAGISelMatcher.cpp",
     "DAGISelMatcherEmitter.cpp",
     "DAGISelMatcherGen.cpp",
