--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -94,6 +94,31 @@
             ]
         },
         {
+            "name": "tablegen dump all",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/Debug/bin/llvm-tblgen",
+            "args": [
+                 "./llvm/lib/Target/Mips/Mips.td",
+                 "-I./llvm/include/",
+                 "-I./llvm/lib/Target/Mips/",
+                //  "-o", "${workspaceFolder}/deleteme/test_all.inc",
+                 "-debug",
+                ],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "objdump",
             "type": "cppdbg",
             "request": "launch",
@@ -158,6 +183,6 @@
                     "ignoreFailures": true
                 }
             ]
-        }
+        },
     ]
 }
