print asm exe add file for exe implementation

--- a/llvm/lib/CMakeLists.txt
+++ b/llvm/lib/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(Option)
 add_subdirectory(Remarks)
 add_subdirectory(DebugInfo)
 add_subdirectory(ExecutionEngine)
+add_subdirectory(Sim)
 add_subdirectory(Target)
 add_subdirectory(AsmParser)
 add_subdirectory(LineEditor)
